err.log
CmdHandle.hs:50:23: error:
    • Couldn't match type ‘Bool’ with ‘(Bool, Bool)’
      Expected type: IO (Bool, Bool)
        Actual type: IO Bool
    • In the expression: withoutExit $ cd args
      In a case alternative: ("cd", args) -> withoutExit $ cd args
      In a stmt of a 'do' block:
        case (cmd, args') of
          ("exit", _) -> return (False, True)
          ("cd", args) -> withoutExit $ cd args
          ("print", args) -> withoutExit $ printEnvVars args
          ("let", args) -> withoutExit $ letFunc args
          (cmd, args) -> withoutExit $ runExec cmd args context
   |
50 |     ("cd",args)    -> withoutExit $ cd args 
   |                       ^^^^^^^^^^^^^^^^^^^^^
